<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_launcher_360_selected"
        android:shortcutDisabledMessage="@string/shortcuts_back_disable_msg"
        android:shortcutId="notification_settings"
        android:shortcutLongLabel="@string/shortcuts_back_long_label"
        android:shortcutShortLabel="@string/shortcuts_back_short_label">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.yzs.demo.notificationdemo.NotificationsActivity"
            android:targetPackage="com.yzs.demo.notificationdemo" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_launcher_manual"
        android:shortcutDisabledMessage="@string/shortcuts_pip_disable_msg"
        android:shortcutId="pip_settings"
        android:shortcutLongLabel="@string/shortcuts_pip_long_label"
        android:shortcutShortLabel="@string/shortcuts_pip_short_label">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.yzs.demo.notificationdemo.PipDemoActivity"
            android:targetPackage="com.yzs.demo.notificationdemo" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
